integ-tests/tests/snapshots/parser__bad_leading_zeros__neg_two_zeros.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ neg_two_zeros:1:7
  │
1 │ a = -00
  │       ^ unable to parse number


